assignment2/target/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'Break'", "'Continue'", 
                     "'If'", "'Elseif'", "'Else'", "'Foreach'", "'True'", 
                     "'False'", "'Float'", "'Boolean'", "'String'", "'Int'", 
                     "'Null'", "'Var'", "'Val'", "'Array'", "'Self'", "'Return'", 
                     "'New'", "'In'", "'Class'", "'Constructor'", "'Destructor'", 
                     "'By'", "'('", "')'", "'['", "']'", "'..'", "'.'", 
                     "','", "';'", "'{'", "'}'", "'::'", "':'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'!'", "'&&'", "'||'", "'=='", "'!='", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'>'", "'>='", "'<'", "'<='", 
                     "'+.'", "'==.'", "'='" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "BREAK", "CONTINUE", "IF", 
                      "ELSEIF", "ELSE", "FOREACH", "TRUE", "FALSE", "FLOAT", 
                      "BOOLEAN", "STRING", "INT", "NULL", "VAR", "VAL", 
                      "ARRAY", "SELF", "RETURN", "NEW", "IN", "CLASS", "CONSTRUCTOR", 
                      "DESTRUCTOR", "BY", "LB", "RB", "LSB", "RSB", "DOUBLE_DOT", 
                      "DOT", "COMMA", "SEMI", "LP", "RP", "DOUBLE_COLON", 
                      "COLON", "STRING_LIT", "FLOAT_LIT", "INT_LIT", "BOOLEAN_LIT", 
                      "ZERO_LIT", "NOT", "AND", "OR", "IS_EQUAL", "NOT_EQUAL", 
                      "ADD", "SUB", "MULTIPLY", "DIV", "MOD", "GT", "GTE", 
                      "LT", "LTE", "ADD_STR", "IS_EQUAL_STR", "EQUAL", "WS", 
                      "ID", "STATIC_ID", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_class_declare = 1
    RULE_name_class = 2
    RULE_body_class = 3
    RULE_mem_class_declare = 4
    RULE_constructor_declare = 5
    RULE_params_list = 6
    RULE_params_declare = 7
    RULE_id_list = 8
    RULE_type_data = 9
    RULE_primitive_type = 10
    RULE_array_type = 11
    RULE_element_type = 12
    RULE_size = 13
    RULE_class_type = 14
    RULE_destructor_declare = 15
    RULE_method_declare = 16
    RULE_attribute_declare = 17
    RULE_variable_name_list = 18
    RULE_id_or_staticID = 19
    RULE_value_list = 20
    RULE_block_stmt = 21
    RULE_stmt = 22
    RULE_variable_and_constant_stmt = 23
    RULE_variable_name_list_in_method = 24
    RULE_value_list_stmt = 25
    RULE_assignment_stmt = 26
    RULE_scalar_variable = 27
    RULE_index_exp_for_scalar_variable = 28
    RULE_if_stmt = 29
    RULE_for_in_stmt = 30
    RULE_break_stmt = 31
    RULE_continue_stmt = 32
    RULE_return_stmt = 33
    RULE_method_invocation_stmt = 34
    RULE_static_method_invocation = 35
    RULE_instance_method_invocation = 36
    RULE_pre_exp = 37
    RULE_exp = 38
    RULE_exp1 = 39
    RULE_exp2 = 40
    RULE_exp3 = 41
    RULE_exp4 = 42
    RULE_exp5 = 43
    RULE_exp6 = 44
    RULE_exp7 = 45
    RULE_exp8 = 46
    RULE_exp9 = 47
    RULE_exp10 = 48
    RULE_operands = 49
    RULE_literals = 50
    RULE_boolean_literal = 51
    RULE_array_literal = 52
    RULE_multidimensional_array = 53
    RULE_array_list = 54
    RULE_indexed_array = 55
    RULE_exp_list = 56
    RULE_index_operator = 57

    ruleNames =  [ "program", "class_declare", "name_class", "body_class", 
                   "mem_class_declare", "constructor_declare", "params_list", 
                   "params_declare", "id_list", "type_data", "primitive_type", 
                   "array_type", "element_type", "size", "class_type", "destructor_declare", 
                   "method_declare", "attribute_declare", "variable_name_list", 
                   "id_or_staticID", "value_list", "block_stmt", "stmt", 
                   "variable_and_constant_stmt", "variable_name_list_in_method", 
                   "value_list_stmt", "assignment_stmt", "scalar_variable", 
                   "index_exp_for_scalar_variable", "if_stmt", "for_in_stmt", 
                   "break_stmt", "continue_stmt", "return_stmt", "method_invocation_stmt", 
                   "static_method_invocation", "instance_method_invocation", 
                   "pre_exp", "exp", "exp1", "exp2", "exp3", "exp4", "exp5", 
                   "exp6", "exp7", "exp8", "exp9", "exp10", "operands", 
                   "literals", "boolean_literal", "array_literal", "multidimensional_array", 
                   "array_list", "indexed_array", "exp_list", "index_operator" ]

    EOF = Token.EOF
    COMMENT=1
    BREAK=2
    CONTINUE=3
    IF=4
    ELSEIF=5
    ELSE=6
    FOREACH=7
    TRUE=8
    FALSE=9
    FLOAT=10
    BOOLEAN=11
    STRING=12
    INT=13
    NULL=14
    VAR=15
    VAL=16
    ARRAY=17
    SELF=18
    RETURN=19
    NEW=20
    IN=21
    CLASS=22
    CONSTRUCTOR=23
    DESTRUCTOR=24
    BY=25
    LB=26
    RB=27
    LSB=28
    RSB=29
    DOUBLE_DOT=30
    DOT=31
    COMMA=32
    SEMI=33
    LP=34
    RP=35
    DOUBLE_COLON=36
    COLON=37
    STRING_LIT=38
    FLOAT_LIT=39
    INT_LIT=40
    BOOLEAN_LIT=41
    ZERO_LIT=42
    NOT=43
    AND=44
    OR=45
    IS_EQUAL=46
    NOT_EQUAL=47
    ADD=48
    SUB=49
    MULTIPLY=50
    DIV=51
    MOD=52
    GT=53
    GTE=54
    LT=55
    LTE=56
    ADD_STR=57
    IS_EQUAL_STR=58
    EQUAL=59
    WS=60
    ID=61
    STATIC_ID=62
    UNCLOSE_STRING=63
    ILLEGAL_ESCAPE=64
    ERROR_CHAR=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def class_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Class_declareContext)
            else:
                return self.getTypedRuleContext(D96Parser.Class_declareContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 116
                self.class_declare()
                self.state = 119 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 121
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def name_class(self):
            return self.getTypedRuleContext(D96Parser.Name_classContext,0)


        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def body_class(self):
            return self.getTypedRuleContext(D96Parser.Body_classContext,0)


        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_class_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_declare" ):
                return visitor.visitClass_declare(self)
            else:
                return visitor.visitChildren(self)




    def class_declare(self):

        localctx = D96Parser.Class_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(D96Parser.CLASS)
            self.state = 124
            self.name_class()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 125
                self.match(D96Parser.COLON)
                self.state = 126
                self.match(D96Parser.ID)


            self.state = 129
            self.match(D96Parser.LP)
            self.state = 130
            self.body_class()
            self.state = 131
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Name_classContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_name_class

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitName_class" ):
                return visitor.visitName_class(self)
            else:
                return visitor.visitChildren(self)




    def name_class(self):

        localctx = D96Parser.Name_classContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_name_class)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(D96Parser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_classContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mem_class_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Mem_class_declareContext)
            else:
                return self.getTypedRuleContext(D96Parser.Mem_class_declareContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_body_class

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody_class" ):
                return visitor.visitBody_class(self)
            else:
                return visitor.visitChildren(self)




    def body_class(self):

        localctx = D96Parser.Body_classContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_body_class)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.VAR) | (1 << D96Parser.VAL) | (1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.ID) | (1 << D96Parser.STATIC_ID))) != 0):
                self.state = 135
                self.mem_class_declare()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mem_class_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def constructor_declare(self):
            return self.getTypedRuleContext(D96Parser.Constructor_declareContext,0)


        def destructor_declare(self):
            return self.getTypedRuleContext(D96Parser.Destructor_declareContext,0)


        def method_declare(self):
            return self.getTypedRuleContext(D96Parser.Method_declareContext,0)


        def attribute_declare(self):
            return self.getTypedRuleContext(D96Parser.Attribute_declareContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_mem_class_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMem_class_declare" ):
                return visitor.visitMem_class_declare(self)
            else:
                return visitor.visitChildren(self)




    def mem_class_declare(self):

        localctx = D96Parser.Mem_class_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mem_class_declare)
        try:
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.CONSTRUCTOR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.constructor_declare()
                pass
            elif token in [D96Parser.DESTRUCTOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.destructor_declare()
                pass
            elif token in [D96Parser.ID, D96Parser.STATIC_ID]:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.method_declare()
                pass
            elif token in [D96Parser.VAR, D96Parser.VAL]:
                self.enterOuterAlt(localctx, 4)
                self.state = 144
                self.attribute_declare()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constructor_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONSTRUCTOR(self):
            return self.getToken(D96Parser.CONSTRUCTOR, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def block_stmt(self):
            return self.getTypedRuleContext(D96Parser.Block_stmtContext,0)


        def params_list(self):
            return self.getTypedRuleContext(D96Parser.Params_listContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_constructor_declare

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstructor_declare" ):
                return visitor.visitConstructor_declare(self)
            else:
                return visitor.visitChildren(self)




    def constructor_declare(self):

        localctx = D96Parser.Constructor_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_constructor_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(D96Parser.CONSTRUCTOR)
            self.state = 148
            self.match(D96Parser.LB)
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ID:
                self.state = 149
                self.params_list()


            self.state = 152
            self.match(D96Parser.RB)
            self.state = 153
            self.block_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Params_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def params_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.Params_declareContext)
            else:
                return self.getTypedRuleContext(D96Parser.Params_declareContext,i)

